# rtask

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  tasks.db
.github/workflows/: build.yml  lint.yml  release.yml
src/: app_state.rs  backend.rs  cli.rs  colors.rs  commander.rs  db.rs  error.rs  main.rs  task.rs  task_option.rs
src/tui/: mod.rs
