[package]
name = "rtask"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
console = "0.15.11"
dirs = "6.0.0"
ratatui = "0.29.0"
rusqlite = {version =  "0.36.0", features = ["bundled"]}
uuid = {version =  "1.17.0", features = ['v4']}
