[package]
name = "rtask"
version = "0.3.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
owo-colors = "4.2.2"
ratatui = "0.29.0"
serde = {version =  "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
