[package]
name = "rtask"
version = "0.3.2"
edition = "2024"
description = "CLI/TUI task manager"
authors = ["megonilus"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
owo-colors = "4.2.2"
ratatui = "0.29.0"
serde = {version =  "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
